2013-07-18  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ThirdPartyToolbox/FastMarchingToolbox:

	- Toolbox Fast Marching by Gabriel Peyre

	24 Oct 2004 (Updated 27 Jun 2009). A toolbox for the computation
	of the Fast Marching algorithm in 2D and 3D.

	Downloaded from
	http://www.mathworks.com/matlabcentral/fileexchange/6110

2013-07-12  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/smdscale.m: (0.5.0)
	* matlab/test/test_smdscale.m: (0.2.4)

	- Substantial rewrite of smdscale.

	- The previous version did not have a correct implementation of
	Agarwal's method. An iteration to adjust the mean position of each
	point with respect to its neighbours was missing.

	- I have replace Matlab functions distance, azimuth, meanm and
	reckon by the corresponding formulas, so that the function runs
	faster.

	- Now we convert to angular distances, and then internally all
	operations are with angular distances in radians.

	- Output arguments stopCondition and err have swapped places.

	- err is no longer a vector with the Frobenius norm. Now it's a
	struct with several error metrics: err.rawstress, err.stress1,
	err.maxalpha, err.medalpha.

2013-07-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/trihemisphere.m: (0.1.0)

	- TRIHEMISPHERE Triangular mesh on hemisphere with roughly
	uniformly distributed points.

2013-07-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_con.m: (0.1.1)

	- Fix bug. If the input connectivity matrix was boolean, then
	distances got casted to boolean too. To fix this, we cast the
	connectivity matrix to double.

	* Add matlab/ManifoldToolbox/dmatrix_con.m: (0.1.0)

	- DMATRIX_CON Sparse distance and shortest-path distance matrices
	between the nodes of a mesh from a connectivity matrix.

	* Add matlab/ManifoldToolbox/congrow.m: (0.1.0)
	* Add matlab/test/test_congrow.m: (0.1.0)

	- CONGROW Grow the local neighbourhoods in a connectivity matrix.
